# pdftk

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  CONTEXT.md  GITHUB_RELEASE_v0.1.1.md  IMPLEMENTATION.md  MANIFEST.in  POST_PUBLICATION_STATUS.md  PUBLISHING.md  README.md  RELEASE_CONTENT_v0.1.1.txt  UPDATING_PYPI.md  UV_TOOL_GUIDE.md  demo.py  generate_test_pdfs.py  pdftk.md  pyproject.toml  test_multi_pdf.py  v0.1.1_COMPLETE.md
.github/workflows/: ci.yml
src/pdftk/: __init__.py  __main__.py  cli.py  core.py  parser.py  utils.py
tests/: __init__.py  create_fixtures.py  test_core.py  test_parser.py  test_utils.py
