[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftk-python"
version = "0.1.0"
description = "PDF Toolkit - A command-line tool for manipulating PDF documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=3.0.0",
]
license = {text = "MIT"}
authors = [
    {name = "Frank Liu"}
]
keywords = ["pdf", "pdftk", "pdf-manipulation", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.scripts]
pdftk = "pdftk.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
