[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdftk-python"
version = "0.1.1"
description = "PDF Toolkit - A command-line tool for manipulating PDF documents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pypdf>=3.0.0",
]
license = {text = "MIT"}
authors = [
    {name = "Frankie Liu", email = "frankie.y.liu@gmail.com"}
]
keywords = ["pdf", "pdftk", "pdf-manipulation", "cli", "pdf-tools", "merge", "split", "rotate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Office/Business",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/frankieliu/pdftk"
Repository = "https://github.com/frankieliu/pdftk"
Issues = "https://github.com/frankieliu/pdftk/issues"
Changelog = "https://github.com/frankieliu/pdftk/blob/main/IMPLEMENTATION.md"

[project.scripts]
pdftk = "pdftk.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "reportlab>=4.0.0",
]
